canary/voting-app/chart/templates/vote-service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vote
  name: vote-canary
spec:
  ports:
  - name: "vote-service"
    port: 80
    targetPort: 80
  selector:
    app: vote
